Fixed position of article background that caused issues on Firefox

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@ body {
 }
 
 .main {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr auto 1fr auto 1fr;
     align-items: center;
